@@ -182,7 +182,7 @@ let save_cmt filename modname binary_annots sourcefile initial_env cmi =
            cmt_comments = Lexer.comments ();
            cmt_args = Sys.argv;
            cmt_sourcefile = sourcefile;
-           cmt_builddir =  Sys.getcwd ();
+           cmt_builddir = Location.rewrite_absolute_path (Sys.getcwd ());
            cmt_loadpath = !Config.load_path;
            cmt_source_digest = source_digest;
            cmt_initial_env = if need_to_clear_env then
